org\codeminus\css\base.css prevent outline from showing on firefox

--- a/org/codeminus/css/base.css
+++ b/org/codeminus/css/base.css
@@ -9,7 +9,7 @@ body{
   color: #444;
 }
 *{
-  outline: none;
+  outline: none !important;
 }
 h1, h2, h3, h4, h5, h6{
   margin: 10px 0;
